# bitrecs

./: README.md  __init__.py  api_core.py  api_server.py  cerebras.py  chat_gpt.py  chutes.py  claude.py  color.py  compressor.py  config.py  constants.py  distance.py  events.py  factory.py  gemini.py  grok.py  groq.py  install_miner.sh  llm_provider.py  logging.py  miner.py  mock.py  neuron.py  nvidia_inference.py  open_router.py  perplexity.py  product.py  prompt_factory.py  protocol.py  pyproject.toml  r2.py  rarity.py  reasoning.py  reward.py  running_miner.md  runtime.py  score_metrics.py  test_api.py  test_distance.py  (+21 more)
