[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Bitrecs"
dynamic = ["version"]
description = "Product recommendations on Bittensor"
authors = [
    {name = "Bitrecs", email = "support@bitrecs.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "bittensor==10.0.0",
    "bittensor-cli==9.16.0",
    "substrate-interface==1.7.11",
    "async-substrate-interface==1.5.14",
    "cryptography==45.0.5",
    "starlette==0.37.2",
    "pydantic==2.12.4",
    "numpy==2.0.2",
    "python-dotenv==1.2.1",
    "openai==2.8.1",
    "pandas==2.2.3",
    "json-repair==0.54.1",
    "jsonschema==4.25.1",
    "wandb==0.21.1",
    "tiktoken==0.12.0",
    "slowapi==0.1.9",
    "websockets==15.0.1"
]

[project.urls]
homepage = "https://bitrecs.ai"
repository = "https://github.com/bitrecs/bitrecs-subnet"
documentation = "https://github.com/bitrecs/bitrecs-subnet#readme"
issues = "https://github.com/bitrecs/bitrecs-subnet/issues"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio",
    "black",
    "isort",
    "ruff>=0.14.4",
]

test = [
    "pytest==8.4.2",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bitrecs*"]

[tool.setuptools.dynamic]
version = {attr = "bitrecs.__version__"}

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top of file    
]